added backend for alpha launcher